Remove headline wrap and fix schema tag on post/page title's

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1481,9 +1481,6 @@ body {
   color: #ffffff;
   text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
 }
-.headline-wrap h2 {
-  text-transform: uppercase;
-}
 .byline {
   clear: both;
   font-size: 80%;
