--- a/assets/less/page.less
+++ b/assets/less/page.less
@@ -99,21 +99,6 @@ body {
 		}
 	}
 }
-.headline-wrap {
-	h1 {
-		
-	}
-	h2 {
-		text-transform: uppercase;
-	}
-}
-.article-wrap {
-	h2 {
-		
-	}
-	h3 {
-	}
-}
 .byline {
 	clear: both;
 	font-size: 80%;
